<resources>
    <string name="app_name">Taskie</string>
    <string name="tab_text_1">Tasks</string>
    <string name="tab_text_2">Diary</string>
    <string name="work_task">Work</string>
    <string name="relax_task">Relax</string>
    <string name="save">Save</string>
    <string name="new_task">Task name</string>
    <string name="back">Back</string>
    <string name="theme">Theme</string>
    <string name="notifications">Notifications</string>
    <string name="calendar">Calendar</string>
    <string name="enable_notifications">Enable notifications for undone tasks (19:30)</string>
    <string name="write_your_thoughts">Write your thoughts...</string>
    <string name="mint_green">Mint green</string>
    <string name="peach_orange">Peach orange</string>
    <string name="today_i_am_grateful_for">Today I am grateful for:</string>
</resources>