<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/one_tab_layout_T"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItemTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme" />

    </com.google.android.material.tabs.TabLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="286dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_tab_layout_T">

        <RadioButton
            android:id="@+id/radioButtonPeach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/peach_orange" />

        <RadioButton
            android:id="@+id/radioButtonMint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mint_green" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>